--- a/travel_planner_mobile/tsconfig.json
+++ b/travel_planner_mobile/tsconfig.json
@@ -3,27 +3,12 @@
   "compilerOptions": {
     "strict": true,
     "paths": {
-      "@/*": [
-        "./*"
-      ],
-      "@modules/*": [
-        "./modules/*"
-      ],
-      "@features/*": [
-        "./modules/features/*"
-      ],
-      "@shared/*": [
-        "./modules/shared/*"
-      ],
-      "@assets/*": [
-        "./assets/*"
-      ]
+      "@/*": ["./*"],
+      "@modules/*": ["./modules/*"],
+      "@features/*": ["./modules/features/*"],
+      "@shared/*": ["./modules/shared/*"],
+      "@assets/*": ["./assets/*"]
     }
   },
-  "include": [
-    "**/*.ts",
-    "**/*.tsx",
-    ".expo/types/**/*.ts",
-    "expo-env.d.ts"
-  ]
+  "include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts"]
 }
